删除一些没有必要的代码。